DEMO-4 Update index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <<!DOCTYPE html>
 <html>
   <head>
-    <title>Soap App</title>
+    <title>Soap App Test</title>
   </head>
   <body>
     This is soap app .
